# lbsntransform

./: .gitignore  .gitlab-ci.yml  .project  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  VERSION  __init__.py  cx_setup.py  environment.yml  environment_dev.yml  lbsntransform.pyproj  lbsntransform.sln  make_release.sh  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  transferData.py  transferIncremental_AllJson_To_Lbsn.pyproj  transferIncremental_AllJson_To_Lbsn.sln  transfer_lbsn_data.py  transfer_lbsn_data.pyproj  transfer_lbsn_data.sln
classes/: dbConnection.py  fieldMapping.py  helperFunctions.py  submitData.py
config/: config.py
docker/: Dockerfile
docs/: about.md  index.md  input-mappings.md  input-types.md  inputoutput.sequence  install-alternatives.md  install-conda.md  install-docker.md  mappings.md  output-mappings.md  package.md  quick-guide.md  resources.md  setup.md  use-cases.md
docs/apidoc/: logo.mako
docs/argparse/: argparse_after_doc.py  argparse_doc.py  examples.md
docs/overrides/: footer.html
lbsntransform/: __init__.py  __main__.py  lbsntransform.py  lbsntransform_.py  version.py
lbsntransform/classes/: db_connection.py  fieldMapping.py  field_mapping.py  field_mapping_fb.py  field_mapping_flickr.py  field_mapping_twitter.py  field_mapping_yfcc100m.py  helper_functions.py  hll_bases.py  hll_functions.py  loadData.py  load_data.py  shared_structure.py  shared_structure_proto_hlldb.py  shared_structure_proto_lbsndb.py  sql_hll.py  sql_lbsn.py  store_csv.py  submitData.py  submit_data.py
lbsntransform/config/: __init__.py  config.py
lbsntransform/data_input/: load_data.py
lbsntransform/data_input/mappings/: db_query.py  field_mapping_flickr.py  field_mapping_yfcc100m.py
lbsntransform/input/: __init__.py  load_data.py
lbsntransform/input/mappings/: __init__.py  db_query.py  field_mapping_fb.py  field_mapping_flickr.py  field_mapping_lbsn.py  field_mapping_twitter.py  field_mapping_yfcc100m.py
lbsntransform/output/: __init__.py  shared_structure.py  submit_data.py
lbsntransform/output/csv/: __init__.py  store_csv.py
lbsntransform/output/hll/: __init__.py  hll_bases.py  hll_functions.py  shared_structure_proto_hlldb.py  sql_hll.py
lbsntransform/output/hll/base/: social.py  spatial.py  temporal.py  topical.py
lbsntransform/output/lbsn/: shared_structure_proto_lbsndb.py  sql_lbsn.py
lbsntransform/tools/: db_connection.py  helper_functions.py
resources/mappings/: field_mapping_fb.py  field_mapping_flickr.py  field_mapping_inaturalist_gbif.py  field_mapping_instagram.py  field_mapping_reddit.py  field_mapping_twitter.py  field_mapping_yfcc100m.py
src/lbsntransform/: __init__.py  __main__.py  lbsntransform_.py  version.py
src/lbsntransform/config/: config.py
src/lbsntransform/input/: load_data.py
src/lbsntransform/input/mappings/: db_query.py  field_mapping_lbsn.py
src/lbsntransform/output/: shared_structure.py  submit_data.py
src/lbsntransform/output/csv/: store_csv.py
src/lbsntransform/output/hll/: hll_bases.py  hll_functions.py  shared_structure_proto_hlldb.py
src/lbsntransform/output/hll/base/: __init__.py  social.py  spatial.py  temporal.py  topical.py
src/lbsntransform/output/lbsn/: __init__.py  shared_structure_proto_lbsndb.py  sql_lbsn.py
src/lbsntransform/tools/: __init__.py  db_connection.py  helper_functions.py
structure/: Structure_pb2.py
tests/: cli_test_helpers.py  test_cli.py  test_helperfunctions.py  test_integration_inaturalist_gbif.py  test_integration_yfcc.py
transfer_lbsn_data/: __init__.py  main.py
transfer_lbsn_data/classes/: dbConnection.py  submitData.py
transfer_lbsn_data/config/: config.py
