
[metadata]
name = lbsntransform
author = Alexander Dunkel
author_email = alexander.dunkel@tu-dresden.de
license = GNU GPLv3 or any higher
description = Location based social network (LBSN) data structure format & transfer tool
url = https://gitlab.vgiscience.de/lbsn/lbsntransform
long_description = file: README.md
long_description_content_type = text/markdown

[semantic_release]
version_pattern: README.md:version
version_source: tag
branch: master
build_command: python -m build

[options]
python_requires = >=3.8
packages = find:
package_dir =
    =src
install_requires =
    lbsnstructure>=1.0.3
    protobuf>=4.21.9,<5
    psycopg2-binary
    ppygis3
    shapely<2.0.0
    emoji>=2.0.0
    requests
    geos
    numpy
    requests
    regex
include_package_data = True

[options.package_data]
* = README.md

[options.packages.find]
where = src
include =
    lbsntransform
    lbsntransform.*

[options.entry_points]
console_scripts =
    lbsntransform = lbsntransform.__main__:main

[options.extras_require]
nltk_stopwords = nltk